# web-server

./: .gitignore  Dockerfile  LICENSE  Makefile.am  build.sh  conanfile.txt  configure.ac  readme.md
lib/: install.sh  readme.md
resource/: setting.yaml  web-server.conf  web-server.service
src/: main.cpp
src/config/: cmd_line_parser.cpp  daemon.cpp  log.cpp  server.cpp  setting.cpp  thread_pool.cpp
src/include/: cmd_line_parser.hpp  daemon.hpp  log.hpp  server.hpp  setting.hpp
test/: log_test.cpp  setting_test.cpp
web/: index.html  script.js  style.css
